--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -1,21 +1,37 @@
 <!--pages/home/index.wxml--> 
 <!-- 用户信息 -->
-<view class="user-info">
-  <block wx:if="{{!hasUserInfo && canIUse}}" >
+<view class="user-info" wx:if="{{!hasUserInfo && canIUse}}">
     <image class="avatar" src="{{userInfo.avatar}}" background-size="cover"></image>
     <button class="nickname login-btn font-m" open-type="getUserInfo" bindgetuserinfo="getUserInfo">{{userInfo.nickname}}</button>
-  </block>
+</view>
 
-  <block wx:else>
-    <image class="avatar" src="{{userInfo.avatar}}" background-size="cover"></image>
-    <text class="nickname font-m">{{userInfo.nickname}}</text>
-  </block>
+<view class="hdj-member-info" wx:else>
+    <view class="hdj-member-card-top">
+        <view class="hdj-member-card">
+            <view class="hdj-member-card-info">
+                <image src="{{userInfo.avatar}}" background-size="cover" class="hdj-member-card-avatar"/>
+                <view class="hdj-member-name-meta">
+                    <view class="hdj-member-nickname">{{userInfo.nickname}}</view>
+                    <view class="hdj-member-level-name">
+                        <i class="iconfont icon-vip"></i>
+                        {{userInfo.level_name}}
+                    </view>
+                </view>
+            </view>
+            <view class="hdj-member-card-notice"></view>
+            <image src="/assets/images/vip_tag.png" class="hdj-member-vip-mark"/>
+        </view>
+    </view>
+    <view class="hdj-member-card-bottom">
+        畅享会员特权
+        <view>{{userInfo.level_active_time}}至{{userInfo.level_expired}}</view>
+    </view>
 </view>
 
 <!-- 我的订单 -->
 <view class="block">
   <navigator url="/pages/order/index" class="meta-with-arrow">
-    <text class="block-title">我的订单</text>
+    <text class="block-title iconfont icon-order-list"> 我的订单</text>
     <text class="meta-tail">查看全部订单</text>
   </navigator>
 
@@ -45,7 +61,7 @@
 <!-- 我的资产 -->
 <view class="block">
   <navigator url="/pages/home/wallet" class="meta-with-arrow">
-    <text class="block-title">我的资产</text>
+    <text class="block-title iconfont icon-wallet"> 我的资产</text>
     <text class="meta-tail">查看全部资产</text>
   </navigator>
 
@@ -72,27 +88,46 @@
   </view>
 </view>
 
-<!--
-<navigator class="single-block meta-with-arrow">
-  <text>我的资料</text>
+<navigator class="slide-link" url="/pages/inventory/index" class="single-block meta-with-arrow">
+    <text class="iconfont icon-product"> 我的库存</text>
 </navigator>
-
-<navigator class="single-block meta-with-arrow">
-  <text>我的银行卡</text>
+<navigator class="slide-link" url="/pages/delivery_order/index" class="single-block meta-with-arrow">
+    <text class="iconfont icon-order-list"> 库存订单</text>
+</navigator>
+<!--
+<navigator class="slide-link" url="/pages/home/profile" class="single-block meta-with-arrow">
+    <text class="iconfont icon-account"> 我的资料</text>
 </navigator>
 -->
-
+<!--
+<navigator class="slide-link" url="/pages/recharge/index">
+    <text class="iconfont icon-recharge"> 账户充值</text>
+</navigator>
+-->
+<!--
+<navigator class="slide-link" url="/pages/home/password">
+    <text class="iconfont icon-lock"> 修改密码</text>
+</navigator>
+<navigator class="slide-link" url="/pages/bank/index">
+    <text class="iconfont icon-bank-card"> 我的银行卡</text>
+</navigator>
+-->
 <navigator url="/pages/address/index" class="single-block meta-with-arrow">
-  <text>收货地址</text>
+  <text class="iconfont icon-address"> 收货地址</text>
 </navigator>
-
 <!--
-<navigator class="single-block meta-with-arrow">
-  <text>我要推广</text>
-</navigator>
-
-<navigator class="single-block meta-with-arrow">
-  <text>我要加盟</text>
+<navigator class="slide-link" url="/pages/withdraw/index">
+    <text class="iconfont icon-withdraw"> 我要提现</text>
 </navigator>
 -->
 
+<view wx:if="{{userInfo.level_id == 1}}" class="hdj-join-member-placeholder"></view>
+<wxs module="filters" src="../../assets/utils.wxs"></wxs>
+<view class="hdj-join-member" wx:if="{{userInfo.level_id == 1}}">
+    <view class="hdj-join-member-privilege">成为会员，纵享特权</view>
+
+    <navigator url="/pages/home/member" class="hdj-join-member-btn">
+        <text class="price">{{filters.toFix(min_grant_price, 2)}}</text>
+        开通会员
+    </navigator>
+</view>
