--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -39,16 +39,17 @@ page {
   display: inline-block;
   width: 520rpx;
   padding: 40rpx;
+  background-color: #ffffff;
 }
 
 .category-panel .category-product-list .sub-category {
   color: #565656;
-  font-size: 27rpx;
-  line-height: 2.2rem;
+  font-size: 28rpx;
+  line-height: 2;
   padding-left: 5%;
   display: block;
   margin-top: 40rpx;
-  background-color: #ffffff;
+  border-left: 6rpx solid #FFC426;
 }
 
 .category-product-item {
