--- a/pages/feed/index.wxss
+++ b/pages/feed/index.wxss
@@ -1,34 +1,35 @@
 /* pages/feed/index.wxss */
-.question-wrapper {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: 9;
-  background: #fafafa;
-}
-
-.question {
-  width: 720rpx;
-  margin: 20rpx auto;
-  display: block;
+page {
+  background-color: #f2f2f2;
 }
 
 .feed-list {
   width: 720rpx;
   margin: 20rpx auto;
   text-align: center;
-  /* padding-top: 262rpx; */
 }
 
 .feed {
   margin-bottom: 26rpx;
-  box-shadow: 0 3rpx 3px #e5e5e5;
+  box-shadow: 0 4rpx 10rpx #e5e5e5;
   text-align: left;
+  border-radius: 10rpx;
+  padding: 30rpx;
+  background-color: #ffffff;
+}
+
+.feed-author {
+  display: block;
+  font-size: 32rpx;
+}
+
+.feed-title {
+  font-display: block;
+  font-size: 36rpx;
+  line-height: 2;
 }
 
 .feed-cover {
-  border-top-left-radius: 15rpx;
-  border-top-right-radius: 15rpx;
   width: 100%;
 }
 
