--- a/pages/home/member.wxml
+++ b/pages/home/member.wxml
@@ -22,6 +22,10 @@
     <icon class="iconfont icon-category-{{display}}"></icon>
   </view>
 </view> -->
+<view class="recharge-tips">
+    <i class="iconfont icon-medal"></i>
+    <text>购买以下产品，成为相应等级的会员</text>
+</view>
 
 <!-- 产品列表 -->
 <view class="product-{{display}}">
@@ -36,13 +40,16 @@
   <navigator class="product-grid-item" url="/pages/product/detail?id={{product.id}}">
     <image class="product-image" src="{{product.img}}" mode="widthFix"/>
     <text class="product-name">{{product.name}}</text>
+    <view class="product-tags">
+      <text class="jk-vip-tag jk-vip-tag-{{product.target_level.senior}} iconfont icon-vip" wx:if="{{product.target_level}}">{{product.target_level.name}}</text>
+    </view>
     <view class="product-meta">
       <view class="product-price font-red font-s">
         <text>￥</text>
         <text>{{filters.toFix(product.price, 2)}}</text>
       </view>
 
-      <button class="product-add-to-cart iconfont icon-cart" data-id="{{product.id}}" catchtap="addToCart"></button>
+      <button class="product-add-to-cart iconfont icon-rmb" data-id="{{product.id}}" catchtap="addToCart"></button>
     </view>
   </navigator>
 </template>
@@ -52,6 +59,9 @@
     <image class="product-image" src="{{product.img}}" mode="widthFix"/>
     <view class="product-info">
       <text class="product-name">{{product.name}}</text>
+      <view class="product-tags">
+      <text class="jk-vip-tag jk-vip-tag-{{product.target_level.senior}} iconfont icon-vip" wx:if="{{product.target_level}}">{{product.target_level.name}}</text>
+    </view>
       <view class="product-meta">
         <view class="product-price font-red font-s">
           <text>￥</text>
@@ -59,7 +69,7 @@
         </view>
 
         <!-- <button class="product-add-to-cart iconfont icon-cart" data-id="{{product.id}}" catchtap="addToCart"></button> -->
-        <button catchtap="buy" class="btn11" data-id="{{ product.id }}">下单</button>
+        <button catchtap="buy" class="btn11 iconfont icon-rmb" data-id="{{ product.id }}"> 下单</button>
       </view>
     </view>
   </navigator>
