--- a/pages/order/checkout.wxss
+++ b/pages/order/checkout.wxss
@@ -15,7 +15,7 @@ button::after {
 
 /* 地址栏 */
 .address navigator {
-  border-bottom: 2px dashed #870020;
+  border-bottom: 2px dashed #E9577C;
   padding: .5rem;
   position: relative;
   display: flex;
@@ -27,7 +27,7 @@ button::after {
   font-size: 2rem;
   display: inline-flex;
   margin-right: .5rem;
-  color: #870020;
+  color: #E9577C;
 }
 
 .address navigator::after {
@@ -176,7 +176,7 @@ button::after {
 }
 
 .meta-info-list .meta-info .meta-info-price {
-  color: #870020;
+  color: #E9577C;
 }
 
 /* 金额合计 */
@@ -228,7 +228,7 @@ button::after {
 }
 
 .checkout-toolbar .checkout-summary .checkout-summary-amount {
-  color: #870020;
+  color: #E9577C;
 }
 
 .btn {
@@ -238,6 +238,6 @@ button::after {
 }
 
 .btn-primary {
-  background-color: #870020;
+  background-color: #E9577C;
   color: #ffffff;
 }
