--- a/pages/product/detail.wxml
+++ b/pages/product/detail.wxml
@@ -13,21 +13,6 @@
   </block>
 </swiper>
 
-<view class="flash-product flex flex-between flex-items-center">
-  <view class="flex flex-items-center">
-    <view class="text1">￥{{filters.toFix(product.price,2 )}}</view>
-    <view class="text2"><del>￥200</del></view>
-    <image class="image1" src="/assets/images/xl.png" />
-  </view>
-  <view class="flex flex-column flex-items-center">
-    <view class='text3'>
-      秒杀款
-    </view>
-    <view class="text4">
-      20：10：20
-    </view>
-  </view>
-</view>
 <!-- 产品名称 价格 -->
 <wxs module="filters" src="../../assets/utils.wxs"></wxs>
 <view class="product-primary-info">
@@ -35,17 +20,23 @@
     <text>{{product.name}}</text>
     <text>{{product.desc}}</text>
   </view>
+  <!--
   <view class="product-collection {{product.collection ? 'product-collection-active': ''}}" catchtap="collection">
     <icon class="iconfont {{product.collection ? 'icon-fav-checked' : 'icon-fav'}}"></icon>
     <text>{{product.collection ? '已收藏' : '收藏'}}</text>
   </view>
+  -->
 </view>
-<view class="product-price-info">
-  <text class="product-price">零售价 ￥{{filters.toFix(product.price,2 )}}</text>
+<view class="product-promote-info" wx:if="{{product.is_promote}}">
+</view>
+<view class="product-price-info" wx:else>
+  <text class="product-price">￥{{filters.toFix(product.price, 2)}}</text>
+  <text class="product-market-price">￥{{filters.toFix(product.market_price, 2)}}</text>
   <text class="product-shipping">{{product.shipping_free ? '全场包邮' : ''}}</text>
 </view>
 
 <!-- 收货地址 -->
+<!--
 <view class="consignee-info">
   <view class="meta-with-arrow">
     <text class="font-gray">配送到：</text>
@@ -55,16 +46,17 @@
     </picker>
   </view>
 </view>
+-->
 
 <!-- 商户信息 -->
 <view class="shop-info">
+  <!--
   <view class="meta-with-arrow">
     <icon class="iconfont icon-shop-title"></icon>
     <text class="shop-name">{{shop.name}}</text>
-    <!--
     <text class="meta-tail">查看品牌商品</text>
-    -->
   </view>
+  -->
 
   <view class="meta-with-arrow">
     <view class="protection-info">
@@ -88,8 +80,8 @@
 <import src="../../assets/wxParse/wxParse.wxml"/>
 <view class="tabs">
   <view class="{{tabs.current == 0 ? 'current' : ''}}" bindtap="tabSwitch" data-id="0">图文介绍</view>
-  <view class="{{tabs.current == 1 ? 'current' : ''}}" bindtap="tabSwitch" data-id="1">规格参数</view>
-  <view class="{{tabs.current == 2 ? 'current' : ''}}" bindtap="tabSwitch" data-id="2">包装售后</view>
+  <!-- <view class="{{tabs.current == 1 ? 'current' : ''}}" bindtap="tabSwitch" data-id="1">规格参数</view>
+  <view class="{{tabs.current == 2 ? 'current' : ''}}" bindtap="tabSwitch" data-id="2">包装售后</view> -->
 </view>
 <view class="tabs-container">
   <view id="tab-0" class="tab-panel {{tabs.current == 0 ? 'current' : ''}}">
