--- a/pages/inventory/index.wxss
+++ b/pages/inventory/index.wxss
@@ -1,1 +1,34 @@
 /* pages/inventory/index.wxss */
+
+
+.wishlist-item {
+  margin: 10rpx 20rpx;
+  padding: 10rpx;
+  border-radius: 10rpx;
+  background-color: #ffffff;
+}
+
+.wishlist .lazy {
+  width: 180rpx;
+  height: 180rpx;
+}
+
+.wishlist .content {
+  width: 510rpx;
+  padding-left: 20rpx;
+  color: #999999;
+}
+
+.wishlist .title {
+  color: #333333;
+  font-size: 32rpx;
+  line-height: 80rpx;
+  height: 80rpx;
+}
+
+.wishlist .action {
+  color: #ffffff;
+  padding: 10rpx 30rpx;
+  border-radius: 10rpx;
+  background-color: red;
+}
