--- a/pages/delivery_order/index.wxml
+++ b/pages/delivery_order/index.wxml
@@ -1,2 +1,66 @@
-<!--pages/delivery_order/index.wxml-->
-<text>pages/delivery_order/index.wxml</text>
+<!--pages/order/index.wxml-->
+<wxs module="filters" src="../../assets/utils.wxs"></wxs>
+
+<scroll-view scroll-y>
+  <!-- <view class="tabs">
+    <view class="tab {{status == 0 ? 'current': ''}}" data-status="0" catchtap="switchTab">全部</view>
+    <view class="tab {{status == 1 ? 'current': ''}}" data-status="1" catchtap="switchTab">待付款</view>
+    <view class="tab {{status == 4 ? 'current': ''}}" data-status="4" catchtap="switchTab">待发货</view>
+    <view class="tab {{status == 8 ? 'current': ''}}" data-status="8" catchtap="switchTab">退款/售后</view>
+  </view> -->
+
+  <view class="order-list">
+    <block wx:for="{{orders}}" wx:key="order_sn" wx:for-item="order">
+    <navigator url="/pages/delivery_order/detail?sn={{order.order_sn}}" class="order">
+      <view class="order-header">
+        <text class="order-sn">发货单号:{{order.order_sn}}</text>
+        <text class="order-status font-red">{{order.status_str}}</text>
+      </view>
+
+      <view class="order-info">
+        <view class="shop-info">商家: {{order.shop_name}}</view>
+        <view class="order-detail" wx:for="{{order.details}}" wx:key="id" wx:for-item="detail">
+          <image src="{{detail.img}}" class="detail-img" mode="widthFix"/>
+          <view class="detail-info">
+            <text class="detail-name">{{detail.name}}</text>
+            <text class="detail-attributes font-s">{{detail.attributes}}</text>
+            <view class="tags">
+              <text wx:if="{{detail.is_gift}}" class="gift-tag">赠</text>
+            </view>
+          </view>
+          <view class="detail-amount">
+            <text class="detail-price font-red">
+            <block wx:if="{{!detail.is_gift}}">
+            ￥{{filters.toFix(detail.price, 2)}}
+            </block>
+            </text>
+            <text class="detail-count">x{{detail.count}}</text>
+          </view>
+        </view>
+        <view class="order-summary" wx:if="{{order.delivery_fee > 0}}">
+          <text>运费：￥{{filters.toFix(order.delivery_fee)}}</text>
+        </view>
+        <view class="order-summary">
+          <text>共{{order.total_count}}件，实付</text>
+          <text class="font-red">￥{{filters.toFix(order.amount, 2)}}</text>
+        </view>
+      </view>
+
+      <view class="order-footer" wx:if="{{order.status == 1}}">
+        <button class="order-opera" data-sn="{{order.order_sn}}" catchtap="cancelOrder">取消订单</button>
+        <button class="order-opera-primary" data-sn="{{order.order_sn}}" catchtap="payOrder">订单支付</button>
+      </view>
+
+      <view class="order-footer" wx:if="{{order.status == 6}}">
+        <button class="order-opera" data-sn="{{order.order_sn}}" catchtap="trackOrder">物流跟踪</button>
+        <button class="order-opera-primary" data-sn="{{order.order_sn}}" catchtap="receiveOrder">确认收货</button>
+      </view>
+
+      <view class="order-footer" wx:if="{{order.status == 7}}">
+        <button catchtap="rollbackOrder" data-sn="{{order.order_sn}}" data-detail-id="{{order.details[0].id}}" class="order-opera">申请退单</button>
+        <button catchtap="commentOrder" data-sn="{{order.order_sn}}" data-detail-id="{{order.details[0].id}}" class="order-opera-primary">订单评论</button>
+      </view>
+    </navigator>
+    </block>
+  </view>
+</scroll-view>
