--- a/pages/delivery_order/index.wxss
+++ b/pages/delivery_order/index.wxss
@@ -1,1 +1,126 @@
-/* pages/delivery_order/index.wxss */
+/* pages/order/index.wxss */
+.tabs {
+  display: flex;
+  background-color: #ffffff;
+}
+
+.tabs .tab {
+  flex-grow: 1;
+  text-align: center;
+  padding: 20rpx;
+  border-bottom: 4rpx solid #ffffff;
+}
+
+.tabs .tab.current {
+  color: #E9577C;
+  border-color: #E9577C;
+}
+
+.order-list {
+  margin-top: 20rpx;
+}
+
+.order {
+  margin-bottom: 30rpx;
+  background-color: #ffffff;
+}
+
+.order-header {
+  padding: 30rpx;
+  border-bottom: 2rpx solid #e5e5e5;
+  display: flex;
+  align-items: center;
+}
+
+.order-header .order-status {
+  text-align: right;
+  flex-grow: 1;
+}
+
+.order-info {
+
+}
+
+.order-info .shop-info {
+  padding: 20rpx 30rpx;
+}
+
+.order-info .order-detail {
+  background-color: #fafafa;
+  display: flex;
+  padding: 20rpx 30rpx;
+  border-bottom: 2rpx solid #e5e5e5;
+}
+
+.order-info .order-detail:last-child {
+  border-bottom: 0;
+}
+
+.order-info .order-detail .detail-img {
+  width: 180rpx;
+  height: 180rpx;
+  margin-right: 20rpx;
+}
+
+.order-info .order-detail .detail-info text {
+  display: block;
+}
+
+.order-info .order-detail .detail-info .detail-attributes {
+  margin-top: 20rpx;
+  color: #a3a3a3;
+}
+
+.order-info .order-detail .detail-amount {
+  flex-grow: 1;
+  text-align: right;
+}
+
+.order-info .order-detail .detail-amount text {
+  display: block;
+}
+
+.order-info .order-detail .detail-count {
+  margin-top: 60rpx;
+}
+
+.order-summary {
+  text-align: right;
+  padding: 20rpx 30rpx;
+}
+
+.order-footer {
+  border-top: 2rpx solid #e5e5e5;
+  padding: 20rpx 30rpx;
+  text-align: right;
+}
+
+.order-footer .order-opera, .order-footer .order-opera-primary {
+  display: inline-block;
+  color: #a3a3a3;
+  border: 2rpx solid #a3a3a3;
+  border-radius: 15rpx;
+  vertical-align: middle;
+  padding: 8rpx 16rpx;
+  margin-left: 20rpx;
+  line-height: 1;
+}
+
+.order-footer .order-opera-primary {
+  color: #E9577C;
+  border-color: #E9577C;
+}
+
+.tags {
+  margin-top: 20rpx;
+}
+
+.order-info .order-detail .detail-info .tags .gift-tag {
+  display: inline-block;
+  color: #E9577C;
+  font-size: 28rpx;
+  line-height: 32rpx;
+  border-radius: 8rpx;
+  border: 2rpx solid #E9577C;
+  padding: 4rpx 8rpx;
+}
