--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -127,7 +127,7 @@
     <view class="hdj-join-member-privilege">成为会员，纵享特权</view>
 
     <navigator url="/pages/home/member" class="hdj-join-member-btn">
-        <text class="price">{{filters.toFix(min_grant_price, 2)}}</text>
+        <text class="price">￥{{filters.toFix(min_grant_price, 2)}}</text>
         开通会员
     </navigator>
 </view>
