--- a/pages/product/level.wxml
+++ b/pages/product/level.wxml
@@ -70,8 +70,10 @@
 <import src="../../assets/wxParse/wxParse.wxml"/>
 <view class="tabs">
   <view class="{{tabs.current == 0 ? 'current' : ''}}" bindtap="tabSwitch" data-id="0">图文介绍</view>
+  <!--
   <view class="{{tabs.current == 1 ? 'current' : ''}}" bindtap="tabSwitch" data-id="1">规格参数</view>
   <view class="{{tabs.current == 2 ? 'current' : ''}}" bindtap="tabSwitch" data-id="2">包装售后</view>
+  -->
 </view>
 <view class="tabs-container">
   <view id="tab-0" class="tab-panel {{tabs.current == 0 ? 'current' : ''}}">
@@ -135,38 +137,11 @@
   </view>
 
   <view class="panel-toolbar">
-  <!-- class="confirm-btn" -->
-    <button type="primary" catchtap="buy" disabled="{{product.inventory < count || count <= 0}}">确定</button>
+    <button class="confirm-btn" catchtap="buy" disabled="{{product.inventory < count || count <= 0}}">确定</button>
   </view>
 </view>
 
 <!-- 底部操作菜单 -->
-<!-- <view class="product-footer"> -->
-<!--
-  <view class="menu-service" catchtap="serviceCall" data-phone="{{shop.service}}">
-    <icon class="iconfont icon-service"></icon>
-    <text>客服</text>
-  </view>
--->
-  <!-- <button class="menu-service" open-type="contact">
-    <icon class="iconfont icon-service"></icon>
-    <text>客服</text>
-  </button>
-
-  <navigator url="/pages/index/index" open-type="switchTab" class="menu-home">
-    <icon class="iconfont icon-cup"></icon>
-    <text>首页</text>
-  </navigator> -->
-
-  <!-- <navigator url="/pages/cart/index" open-type="switchTab" class="menu-cart">
-    <icon class="iconfont icon-cart"></icon>
-    <text>购物车</text>
-  </navigator>
-
-  <button class="menu-add-to-cart-btn" catchtap="addToCart" disabled="{{!can_checkout || !support_delivery}}">加入购物车</button> -->
-  <!-- <button type="primary" style="margin:30rpx; border-radius:10rpx;" catchtap="buyNow" disabled="{{!can_checkout || !support_delivery}}">立即购买</button> -->
-<!-- </view> -->
-
-<view style="bottom: 0; width: 750rpx; height: 120rpx; background-color:#ffffff;" class="fixed">
-  <button type="primary" style="margin:30rpx; border-radius:10rpx;" catchtap="buyNow" disabled="{{!can_checkout || !support_delivery}}">立即购买成为专属会员</button>
+<view class="product-footer">
+  <button class="menu-buy-now-btn" catchtap="buyNow" disabled="{{!can_checkout || !support_delivery}}">成为会员</button>
 </view>
